yml file changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="intro">
             <h2>About This Site</h2>
             <p>This is a simple static website created for of my DevOps learning journey. 
-               It is deployed using S# bucket.</p>
+               It is deployed using S3 bucket.</p>
         </section>
 
         <section class="links">
